[package]
name = "apriori2"
version = "0.1.0"
authors = ["Daniel Shiposha <mrshiposha@gmail.com>"]
edition = "2018"

[dependencies]
printf = "0.1.0"
log = "0.4.11"
libc = "0.2.80"
bitflags = "1.2.1"
itertools = "0.9.0"
lazy_static = "1.4.0"
ron = "0.6.2"
serde = { version = "1.0", features = ["derive"] }

[target.'cfg(windows)'.dependencies.winapi]
version = "0.3"
features = ["winuser", "windef", "ntdef", "winbase", "basetsd", "windowsx"]

[build-dependencies]
infra = { path = "../infra" }
cc = { version = "1.0.61", features = ["parallel"] }
bindgen = "0.55.1"
shaderc = "0.6.3"
convert_case = "0.4.0"